--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>My-Portfolio</title>
 </head>
-<body  class="open-sens-normal" >
+<body  class="open-sans-normal" >
     <header>
         <nav>
-            <h3>Ma<span class="text-primary">r</span>y   </h3>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#"><button>Hire me</button></a></li>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button>Hire me</button></a></li>
             </ul>
         </nav>
  
